; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_chroma/extr_d3d11_fmt.c_D3D11_CreateDeviceExternal.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_chroma/extr_d3d11_fmt.c_D3D11_CreateDeviceExternal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i8*, i32*, i32, i32* }

@D3D11_CREATE_DEVICE_VIDEO_SUPPORT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"the provided D3D11 device doesn't support decoding\00", align 1
@E_FAIL = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i8* null, align 8
@GUID_CONTEXT_MUTEX = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @D3D11_CreateDeviceExternal(i32* %0, i32* %1, i32 %2, %struct.TYPE_4__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_4__* %3, %struct.TYPE_4__** %9, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 2
  %17 = call i32 @ID3D11DeviceContext_GetDevice(i32* %14, i32** %16)
  %18 = load i32, i32* %8, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %40

20:                                               ; preds = %4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 2
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @ID3D11Device_GetCreationFlags(i32* %23)
  store i32 %24, i32* %11, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load i32, i32* @D3D11_CREATE_DEVICE_VIDEO_SUPPORT, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %39, label %29

29:                                               ; preds = %20
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @msg_Err(i32* %30, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 2
  %34 = load i32*, i32** %33, align 8
  %35 = call i32 @ID3D11Device_Release(i32* %34)
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 2
  store i32* null, i32** %37, align 8
  %38 = load i32, i32* @E_FAIL, align 4
  store i32 %38, i32* %5, align 4
  br label %73

39:                                               ; preds = %20
  br label %40

40:                                               ; preds = %39, %4
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @ID3D11DeviceContext_AddRef(i32* %41)
  %43 = load i32*, i32** %7, align 8
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 4
  store i32* %43, i32** %45, align 8
  %46 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 0
  store i32 0, i32* %47, align 8
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 2
  %50 = load i32*, i32** %49, align 8
  %51 = call i32 @ID3D11Device_GetFeatureLevel(i32* %50)
  %52 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %53 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %52, i32 0, i32 3
  store i32 %51, i32* %53, align 8
  %54 = load i8*, i8** @INVALID_HANDLE_VALUE, align 8
  store i8* %54, i8** %12, align 8
  store i32 8, i32* %13, align 4
  %55 = load i32*, i32** %7, align 8
  %56 = call i32 @ID3D11DeviceContext_GetPrivateData(i32* %55, i32* @GUID_CONTEXT_MUTEX, i32* %13, i8** %12)
  store i32 %56, i32* %10, align 4
  %57 = load i32, i32* %10, align 4
  %58 = call i64 @SUCCEEDED(i32 %57)
  %59 = icmp ne i64 %58, 0
  br i1 %59, label %60, label %64

60:                                               ; preds = %40
  %61 = load i8*, i8** %12, align 8
  %62 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 1
  store i8* %61, i8** %63, align 8
  br label %68

64:                                               ; preds = %40
  %65 = load i8*, i8** @INVALID_HANDLE_VALUE, align 8
  %66 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %67 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %66, i32 0, i32 1
  store i8* %65, i8** %67, align 8
  br label %68

68:                                               ; preds = %64, %60
  %69 = load i32*, i32** %6, align 8
  %70 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %71 = call i32 @D3D11_GetDriverVersion(i32* %69, %struct.TYPE_4__* %70)
  %72 = load i32, i32* @S_OK, align 4
  store i32 %72, i32* %5, align 4
  br label %73

73:                                               ; preds = %68, %29
  %74 = load i32, i32* %5, align 4
  ret i32 %74
}

declare dso_local i32 @ID3D11DeviceContext_GetDevice(i32*, i32**) #1

declare dso_local i32 @ID3D11Device_GetCreationFlags(i32*) #1

declare dso_local i32 @msg_Err(i32*, i8*) #1

declare dso_local i32 @ID3D11Device_Release(i32*) #1

declare dso_local i32 @ID3D11DeviceContext_AddRef(i32*) #1

declare dso_local i32 @ID3D11Device_GetFeatureLevel(i32*) #1

declare dso_local i32 @ID3D11DeviceContext_GetPrivateData(i32*, i32*, i32*, i8**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @D3D11_GetDriverVersion(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
